--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PlayNFT - A playground for your NFTs</title>
+  <title>PlayNFT - The Playground for your NFTs</title>
   <meta content="" name="description">
 
   <meta content="nft" name="keywords">
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>FlexStart</span>
+        <span>PlayNFT</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -69,8 +69,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Welcome to the playground for your NFTs</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We allow you to connect your tokens with apps and games.</h2>
+          <h1 data-aos="fade-up">The playground for your NFTs</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Connect your tokens with apps and games.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
