--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>Who We Are</h3>
-              <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
+              <h2>We are building an ecosystem to extend the utility and value of NFTs.</h2>
               <p>
-                Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
+                This platform was created to allow NFT holders and creators to add value to their tokens by using them in blockchain enabled games. Game developers can use this platform to fundraise or create unique experiences for their blockchain communities.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -120,7 +120,7 @@
 
     </section><!-- End About Section -->
 
-    <!-- ======= Values Section ======= -->
+    <!-- ======= Values Section ======= 
     <section id="values" class="values">
 
       <div class="container" data-aos="fade-up">
@@ -160,9 +160,9 @@
 
       </div>
 
-    </section><!-- End Values Section -->
+    </section> End Values Section -->
 
-    <!-- ======= Counts Section ======= -->
+    <!-- ======= Counts Section ======= 
     <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
@@ -211,9 +211,9 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section> End Counts Section -->
 
-    <!-- ======= Features Section ======= -->
+    <!-- ======= Features Section =======
     <section id="features" class="features">
 
       <div class="container" data-aos="fade-up">
@@ -277,14 +277,14 @@
             </div>
           </div>
 
-        </div> <!-- / row -->
+        </div>  / row -->
 
-        <!-- Feature Tabs -->
+        <!-- Feature Tabs
         <div class="row feture-tabs" data-aos="fade-up">
           <div class="col-lg-6">
             <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
 
-            <!-- Tabs -->
+             Tabs 
             <ul class="nav nav-pills mb-3">
               <li>
                 <a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a>
@@ -295,9 +295,9 @@
               <li>
                 <a class="nav-link" data-bs-toggle="pill" href="#tab3">Corrupti</a>
               </li>
-            </ul><!-- End Tabs -->
+            </ul> End Tabs -->
 
-            <!-- Tab Content -->
+            <!-- Tab Content
             <div class="tab-content">
 
               <div class="tab-pane fade show active" id="tab1">
@@ -312,7 +312,7 @@
                   <h4>Incidunt non veritatis illum ea ut nisi</h4>
                 </div>
                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 1 Content -->
+              </div> End Tab 1 Content
 
               <div class="tab-pane fade show" id="tab2">
                 <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
@@ -326,7 +326,7 @@
                   <h4>Incidunt non veritatis illum ea ut nisi</h4>
                 </div>
                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 2 Content -->
+              </div> End Tab 2 Content
 
               <div class="tab-pane fade show" id="tab3">
                 <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
@@ -340,7 +340,7 @@
                   <h4>Incidunt non veritatis illum ea ut nisi</h4>
                 </div>
                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 3 Content -->
+              </div> End Tab 3 Content
 
             </div>
 
@@ -350,9 +350,9 @@
             <img src="assets/img/features-2.png" class="img-fluid" alt="">
           </div>
 
-        </div><!-- End Feature Tabs -->
+        </div> End Feature Tabs
 
-        <!-- Feature Icons -->
+         Feature Icons
         <div class="row feature-icons" data-aos="fade-up">
           <h3>Ratione mollitia eos ab laudantium rerum beatae quo</h3>
 
@@ -418,11 +418,11 @@
 
           </div>
 
-        </div><!-- End Feature Icons -->
+        </div>End Feature Icons 
 
       </div>
 
-    </section><!-- End Features Section -->
+    </section> End Features Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -431,7 +431,7 @@
 
         <header class="section-header">
           <h2>Services</h2>
-          <p>Veritatis et dolores facere numquam et praesentium</p>
+          <p>NFT Playground</p>
         </header>
 
         <div class="row gy-4">
@@ -439,56 +439,30 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-box blue">
               <i class="ri-discuss-line icon"></i>
-              <h3>Nesciunt Mete</h3>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <h3>NFT Gamers</h3>
+              <p>Select NFTs from your wallet and connect them to in-game rewards and bonuses.</p>
               <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-box orange">
+            <div class="service-box green">
               <i class="ri-discuss-line icon"></i>
-              <h3>Eosle Commodi</h3>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <h3>NFT Creators</h3>
+              <p>Increase the value of your NFTs by adding in-game rewards and bonuses for every holder.</p>
               <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-box green">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Ledo Markt</h3>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-box red">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Asperiores Commodi</h3>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-box purple">
               <i class="ri-discuss-line icon"></i>
-              <h3>Velit Doloremque.</h3>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <h3>Game Developers</h3>
+              <p>Add your game to our platform and integrate with our API to enable NFT rewards and bonuses.</p>
               <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
-            <div class="service-box pink">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Dolori Architecto</h3>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div>
 
         </div>
 
