--- a/index.html
+++ b/index.html
@@ -440,8 +440,9 @@
             <div class="service-box blue">
               <i class="ri-discuss-line icon"></i>
               <h3>NFT Gamers</h3>
-              <p>Select NFTs from your wallet and connect them to in-game rewards and bonuses.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <p>Select NFTs from your wallet and connect them for in-game rewards and bonuses.</p>
+              <div class="price"><sup>$</sup>10-25</div>
+              <a href="#" class="btn-buy">Start Now</a>
             </div>
           </div>
 
@@ -450,7 +451,8 @@
               <i class="ri-discuss-line icon"></i>
               <h3>NFT Creators</h3>
               <p>Increase the value of your NFTs by adding in-game rewards and bonuses for every holder.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <div class="price">From <sup>$</sup>$200</div>
+              <a href="#" class="btn-buy">Start Now</a>
             </div>
           </div>
 
@@ -459,7 +461,8 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Game Developers</h3>
               <p>Add your game to our platform and integrate with our API to enable NFT rewards and bonuses.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <div class="price"><sup>$</sup>25</div>
+              <a href="#" class="btn-buy">Start Now</a>
             </div>
           </div>
 
