--- a/index.html
+++ b/index.html
@@ -441,8 +441,11 @@
               <i class="ri-discuss-line icon"></i>
               <h3>NFT Gamers</h3>
               <p>Select NFTs from your wallet and connect them for in-game rewards and bonuses.</p>
-              <div class="price"><sup>$</sup>10-25</div>
-              <a href="#" class="btn-buy">Start Now</a>
+              <div class="pricing">
+                <div class="price"><sup>$</sup>10-25</div>
+              
+                <br/><a href="#" class="btn-buy">Start Now</a>
+              </div>
             </div>
           </div>
 
@@ -451,7 +454,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>NFT Creators</h3>
               <p>Increase the value of your NFTs by adding in-game rewards and bonuses for every holder.</p>
-              <div class="price">From <sup>$</sup>$200</div>
+              <div class="price">From <sup>$</sup>200</div>
               <a href="#" class="btn-buy">Start Now</a>
             </div>
           </div>
