--- a/index.html
+++ b/index.html
@@ -454,8 +454,11 @@
               <i class="ri-discuss-line icon"></i>
               <h3>NFT Creators</h3>
               <p>Increase the value of your NFTs by adding in-game rewards and bonuses for every holder.</p>
-              <div class="price">From <sup>$</sup>200</div>
-              <a href="#" class="btn-buy">Start Now</a>
+              <div class="pricing">
+                <div class="price"><sup>From $</sup>200</div>
+              
+                <br/><a href="#" class="btn-buy">Start Now</a>
+              </div>
             </div>
           </div>
 
@@ -464,8 +467,11 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Game Developers</h3>
               <p>Add your game to our platform and integrate with our API to enable NFT rewards and bonuses.</p>
-              <div class="price"><sup>$</sup>25</div>
-              <a href="#" class="btn-buy">Start Now</a>
+              <div class="pricing">
+                <div class="price"><sup>$</sup>25</div>
+              
+                <br/><a href="#" class="btn-buy">Start Now</a>
+              </div>
             </div>
           </div>
 
