--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <div class="service-box purple">
               <i class="ri-discuss-line icon"></i>
               <h3>Game Developers</h3>
-              <p>Add your game to our platform and integrate with our API to enable NFT rewards and bonuses.</p>
+              <p>Add your game to our platform and integrate with our API to enable NFT gameplay.</p>
               <div class="pricing">
                 <div class="price"><sup>$</sup>25</div>
               
