--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-box blue">
-              <i class="ri-discuss-line icon"></i>
+              <i class="ri-gamepad-line icon"></i>
               <h3>NFT Gamers</h3>
               <p>Select NFTs from your wallet and connect them for in-game rewards and bonuses.</p>
               <div class="pricing">
@@ -451,7 +451,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-box green">
-              <i class="ri-discuss-line icon"></i>
+              <i class="ri-artboard-line icon"></i>
               <h3>NFT Creators</h3>
               <p>Increase the value of your NFTs by adding in-game rewards and bonuses for every holder.</p>
               <div class="pricing">
@@ -464,7 +464,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-box purple">
-              <i class="ri-discuss-line icon"></i>
+              <i class="ri-code-s-slash-line icon"></i>
               <h3>Game Developers</h3>
               <p>Add your game to our platform and integrate with our API to enable NFT gameplay.</p>
               <div class="pricing">
