--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Partners</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#clients">Partners</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#services">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -73,7 +72,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Connect your tokens with apps and games.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a href="#services" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Get Started</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
@@ -482,7 +481,7 @@
 
     </section><!-- End Services Section -->
 
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Pricing Section ======= 
     <section id="pricing" class="pricing">
 
       <div class="container" data-aos="fade-up">
@@ -563,9 +562,9 @@
 
       </div>
 
-    </section><!-- End Pricing Section -->
+    </section> End Pricing Section -->
 
-    <!-- ======= F.A.Q Section ======= -->
+    <!-- ======= F.A.Q Section ======= 
     <section id="faq" class="faq">
 
       <div class="container" data-aos="fade-up">
@@ -577,7 +576,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <!-- F.A.Q List 1-->
+             F.A.Q List 1
             <div class="accordion accordion-flush" id="faqlist1">
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -623,7 +622,7 @@
 
           <div class="col-lg-6">
 
-            <!-- F.A.Q List 2-->
+             F.A.Q List 2
             <div class="accordion accordion-flush" id="faqlist2">
 
               <div class="accordion-item">
@@ -672,9 +671,9 @@
 
       </div>
 
-    </section><!-- End F.A.Q Section -->
+    </section> End F.A.Q Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section =======
     <section id="portfolio" class="portfolio">
 
       <div class="container" data-aos="fade-up">
@@ -827,9 +826,9 @@
 
       </div>
 
-    </section><!-- End Portfolio Section -->
+    </section> End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section ======= 
     <section id="testimonials" class="testimonials">
 
       <div class="container" data-aos="fade-up">
@@ -856,7 +855,7 @@
                   <h4>Ceo &amp; Founder</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div> End testimonial item --
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -872,7 +871,7 @@
                   <h4>Designer</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><! End testimonial item --
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -888,7 +887,7 @@
                   <h4>Store Owner</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><! End testimonial item --
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -904,7 +903,7 @@
                   <h4>Freelancer</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><! End testimonial item --
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -920,7 +919,7 @@
                   <h4>Entrepreneur</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><! End testimonial item --
 
           </div>
           <div class="swiper-pagination"></div>
@@ -928,9 +927,9 @@
 
       </div>
 
-    </section><!-- End Testimonials Section -->
+    </section><! End Testimonials Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= Team Section =======
     <section id="team" class="team">
 
       <div class="container" data-aos="fade-up">
@@ -1022,7 +1021,7 @@
 
       </div>
 
-    </section><!-- End Team Section -->
+    </section> End Team Section -->
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
@@ -1030,20 +1029,17 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Our Clients</h2>
-          <p>Temporibus omnis officia</p>
+          <h2>Our Games</h2>
+          <p>Connect your NFTs with any of the games in the playground</p>
         </header>
 
         <div class="clients-slider swiper-container">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/enigma-minmins.png" class="img-fluid" alt="Min-Mins"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/enigma-shalwend.png" class="img-fluid" alt="Shield of Shalwend"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/enigma-wgo2.png" class="img-fluid" alt="Wargods Online 2"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/enigma-theta.png" class="img-fluid" alt="Theta Warriors Defense"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/enigma-k9.png" class="img-fluid" alt="K9 Empire"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -1051,7 +1047,7 @@
 
     </section><!-- End Clients Section -->
 
-    <!-- ======= Recent Blog Posts Section ======= -->
+    <!-- ======= Recent Blog Posts Section =======
     <section id="recent-blog-posts" class="recent-blog-posts">
 
       <div class="container" data-aos="fade-up">
@@ -1094,7 +1090,7 @@
 
       </div>
 
-    </section><!-- End Recent Blog Posts Section -->
+    </section>End Recent Blog Posts Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -1186,7 +1182,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
+<!--
     <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
@@ -1202,14 +1198,14 @@
         </div>
       </div>
     </div>
-
+  -->
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/logo.png" alt="">
-              <span>FlexStart</span>
+              <span>PlayNFT</span>
             </a>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
             <div class="social-links mt-3">
@@ -1260,7 +1256,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>PlayNFT</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
