--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
               <img src="assets/img/logo.png" alt="">
               <span>PlayNFT</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>We are building an ecosystem to extend the utility and value of NFTs.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -1230,11 +1230,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">NFT Gamers</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">NFT Creators</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Games Developers</a></li>
             </ul>
           </div>
 
