--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">NFT Gamers</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">NFT Creators</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Games Developers</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Game Developers</a></li>
             </ul>
           </div>
 
@@ -1242,8 +1242,8 @@
               A108 Adam Street <br>
               New York, NY 535022<br>
               United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Ethereum Address:</strong> 0x9A5e4aD75D29830D8bca2Ed7A5dA33Cab63DC415<br>
+              <strong>Email:</strong> info@playnft.io<br>
             </p>
 
           </div>
