--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-6">
+          <!--<div class="col-lg-6">
 
             <div class="row gy-4">
               <div class="col-md-6">
@@ -1137,9 +1137,9 @@
               </div>
             </div>
 
-          </div>
+          </div>-->
 
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <form action="forms/contact.php" method="post" class="php-email-form">
               <div class="row gy-4">
 
@@ -1237,15 +1237,13 @@
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
+            <h4>Donations</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Ethereum Address:</strong> 0x9A5e4aD75D29830D8bca2Ed7A5dA33Cab63DC415<br>
-              <strong>Email:</strong> info@playnft.io<br>
+              <strong>Ethereum:</strong> 0x9A5e4aD75D29830D8bca2Ed7A5dA33Cab63DC415<br>
             </p>
-
+            <p>
+              <strong>Bitcoin:</strong> 1CLWMx5WE5UtxUav3USyLNdN2gh84ScBcC<br>
+            </p>
           </div>
 
         </div>
