--- a/index.html
+++ b/index.html
@@ -3075,7 +3075,7 @@
       modal.find('#developers_game_name').val(gameName)
       //modal.find('#developers-game-icon').html('<img src="assets/img/clients/' + gameIcon + '"/>')
       modal.find('#developers_game_info').val(gameInfo)
-      tinymce.get('developers_game_info').setContent(gameInfo)
+      if(gameInfo) tinymce.get('developers_game_info').setContent(gameInfo)
       modal.find('#developers_game_status').val(gameStatus)
       modal.find('#developers_game_steam').attr("checked", gamePlatformSteam)
       modal.find('#developers_game_apple').attr("checked", gamePlatformApple)
@@ -3107,7 +3107,7 @@
       var modal = $(this)
       modal.find('#developers_content_name').val(gameName)
       modal.find('#developers_content_info').val(gameInfo)
-      tinymce.get('developers_content_info').setContent(gameInfo)
+      if(gameInfo) tinymce.get('developers_content_info').setContent(gameInfo)
       modal.find('#developers_content_status').val(gameStatus)
       modal.find('#developers_content_id').val(Id)
       modal.find('#developers_game_id').val(gameId)
