--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-12 text-center">
-            <a href="mailto:info@playnft.io" target="_blank" class="btn btn-primary">Email Us: info@playnft.io</a>
+            <a href="mailto:info@playnft.io" target="_blank" class="btn btn-primary">Email: info@playnft.io</a>
           </div>
         </div>
       </div>
